# places_backend_django

./: .gitignore  Insomnia-places-backend-django-05-11.json  LICENSE  README.md  db.sqlite3  pyproject.toml
apps/favorites/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/favorites/migrations/: 0001_initial.py
apps/user/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_alter_usersavedplacesmodel_deleted_at_and_more.py  0003_alter_usersavedplacesmodel_image.py
apps/user_auth/: admin.py  models.py  serializers.py  tokenization.py  urls.py  views.py
apps/user_auth/migrations/: 0001_initial.py  0002_alter_userauthmodel_push_token.py  0002_userauthmodel_groups_userauthmodel_user_permissions.py  0003_alter_userauthmodel_push_token.py  0003_userauthmodel_deleted_at.py  0004_alter_userauthmodel_deleted_at.py  0004_userauthmodel_last_login_alter_userauthmodel_table.py  0005_userauthmodel_is_superuser.py  0006_userauthmodel_is_staff.py  0007_delete_userauthmodel.py
apps/utils/timestamp/: middleware.py  models.py  utils.py
config/: asgi.py  settings.py  urls.py  wsgi.py
